--- a/index.html
+++ b/index.html
@@ -474,3 +474,139 @@
     </script>
 </body>
 </html>
+<nav>
+    <a href="#home">Home</a>
+    <a href="#services">Services</a>
+    <a href="#contact">Contact</a>
+    <a href="?lang=en">English</a>
+    <a href="?lang=ar">Arabic</a>
+</nav>
+<img src="image.webp" alt="Image" loading="lazy">
+@media (max-width: 768px) {
+    header {
+        padding: 3em 1em;
+    }
+    nav {
+        display: block;
+        text-align: left;
+    }
+}
+<meta name="description" content="We are a global digital marketing agency specializing in SEO, content marketing, and paid advertising.">
+<select id="currency">
+    <option value="USD">$ USD</option>
+    <option value="EUR">€ EUR</option>
+    <option value="GBP">£ GBP</option>
+</select>
+<p id="local-time"></p>
+<script>
+    const localTime = new Date().toLocaleString("en-US", { timeZoneName: "short" });
+    document.getElementById("local-time").innerText = "Local Time: " + localTime;
+</script>
+<a href="https://wa.me/1234567890" target="_blank" class="whatsapp-btn">
+    <i class="fab fa-whatsapp"></i> Chat with us
+</a>
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="شركة HM للتسويق الإلكتروني تقدم خدمات SEO، التسويق بالمحتوى، والإعلانات المدفوعة">
+    <title>شركة HM للتسويق الإلكتروني</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #f4f7fa;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        header {
+            background-image: url('https://example.com/header-bg.jpg');
+            background-size: cover;
+            color: white;
+            padding: 6em 0;
+            text-align: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+        }
+
+        nav {
+            text-align: center;
+            background-color: #333;
+            padding: 1.5em 0;
+            position: sticky;
+            top: 0;
+        }
+
+        nav a {
+            color: white;
+            margin: 0 20px;
+            text-decoration: none;
+            padding: 12px 25px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        nav a:hover {
+            background-color: #007BFF;
+        }
+
+        .language-selector {
+            display: flex;
+            justify-content: center;
+            padding: 1em;
+        }
+
+        .language-selector a {
+            color: #007BFF;
+            margin: 0 10px;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="language-selector">
+        <a href="?lang=en">English</a>
+        <a href="?lang=ar">Arabic</a>
+    </div>
+
+    <header>
+        <h1>شركة HM للتسويق الإلكتروني</h1>
+        <p>تحسين محركات البحث، التسويق بالمحتوى، والإعلانات الممولة</p>
+    </header>
+
+    <nav>
+        <a href="#home">الرئيسية</a>
+        <a href="#services">الخدمات</a>
+        <a href="#contact">اتصل بنا</a>
+    </nav>
+
+    <main>
+        <section id="services">
+            <h2>خدماتنا</h2>
+            <ul>
+                <li>تحسين محركات البحث (SEO)</li>
+                <li>استراتيجيات تسويق المحتوى</li>
+                <li>حملات البريد الإلكتروني</li>
+                <li>تصميم وتطوير المواقع</li>
+            </ul>
+        </section>
+
+        <section id="contact">
+            <h2>اتصل بنا</h2>
+            <p>هل لديك سؤال؟ تواصل معنا عبر <a href="mailto:hamdaouimokrane@gmail.com">البريد الإلكتروني</a></p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 شركة HM للتسويق الإلكتروني. جميع الحقوق محفوظة.</p>
+        <div>
+            <a href="https://wa.me/1234567890" target="_blank"><i class="fab fa-whatsapp"></i> تواصل معنا عبر WhatsApp</a>
+        </div>
+    </footer>
+
+</body>
+</html>
