--- a/index.html
+++ b/index.html
@@ -1,82 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Shop</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
-    .product-card {
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
-      margin-bottom: 20px;
-      transition: transform 0.2s ease-in-out;
-    }
-    .product-card:hover {
-      transform: scale(1.03);
-    }
-    .special-offer {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      background-color: red;
-      color: white;
-      padding: 2px 8px;
-      font-size: 12px;
-      border-radius: 4px;
-    }
-    .cart {
-      position: relative;
-      cursor: pointer;
-    }
-    .cart-badge {
-      position: absolute;
-      top: -5px;
-      right: -10px;
-      background: red;
-      color: white;
-      border-radius: 50%;
-      padding: 4px 8px;
-      font-size: 12px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Shopping Site</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <style>
+        .cart-badge {
+            background-color: red;
+            border-radius: 50%;
+            padding: 2px 8px;
+            color: white;
+            font-weight: bold;
+        }
+        .btn:hover {
+            background-color: #007bff;
+            color: white;
+            transform: scale(1.05);
+        }
+        .card {
+            transition: transform 0.3s ease-in-out;
+        }
+        .card:hover {
+            transform: translateY(-5px);
+        }
+    </style>
 </head>
 <body>
-  <header class="bg-dark text-white p-3">
-    <div class="container d-flex justify-content-between">
-      <h1>My Shop</h1>
-      <nav>
-        <a href="#" class="text-white me-3">Home</a>
-        <a href="#" class="text-white me-3">Products</a>
-        <a href="#" class="cart text-white">Cart <span id="cart-count" class="cart-badge">0</span></a>
-      </nav>
-    </div>
-  </header>
+    <header class="bg-dark text-white p-3">
+        <div class="container d-flex justify-content-between align-items-center">
+            <h1>My Shop</h1>
+            <div class="input-group w-50">
+                <input type="text" class="form-control" placeholder="Search products..." id="search-bar">
+                <button class="btn btn-primary" onclick="searchProducts()">Search</button>
+            </div>
+            <nav>
+                <a href="#" class="text-white me-3">Home</a>
+                <a href="#" class="text-white me-3">Products</a>
+                <a href="#" class="cart text-white">Cart <span id="cart-count" class="cart-badge">0</span></a>
+            </nav>
+        </div>
+    </header>
 
-  <section class="bg-light py-3">
-    <div class="container">
-      <h2>Filter Products</h2>
-      <div class="d-flex gap-3">
-        <button class="btn btn-outline-primary">All</button>
-        <button class="btn btn-outline-secondary">Electronics</button>
-        <button class="btn btn-outline-success">Clothing</button>
-        <button class="btn btn-outline-danger">Deals</button>
-      </div>
-    </div>
-  </section>
+    <main class="container my-5">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card product-card">
+                    <img src="public/laptop.jpg" class="card-img-top" alt="Laptop">
+                    <div class="card-body">
+                        <h5 class="card-title">Laptop</h5>
+                        <p class="card-text">$999.99</p>
+                        <button class="btn btn-success">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card product-card">
+                    <img src="public/smartphone.jpg" class="card-img-top" alt="Smartphone">
+                    <div class="card-body">
+                        <h5 class="card-title">Smartphone</h5>
+                        <p class="card-text">$499.99</p>
+                        <button class="btn btn-success">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card product-card">
+                    <img src="public/headphones.jpg" class="card-img-top" alt="Headphones">
+                    <div class="card-body">
+                        <h5 class="card-title">Headphones</h5>
+                        <p class="card-text">$199.99</p>
+                        <button class="btn btn-success">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-  <main class="container my-5">
-    <h2 class="mb-4">Products</h2>
-    <div id="product-list" class="row"></div>
-  </main>
+        <h2 class="my-5">Recommended Products</h2>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="public/headphones.jpg" class="card-img-top" alt="Wireless Headphones">
+                    <div class="card-body">
+                        <h5 class="card-title">Wireless Headphones</h5>
+                        <p class="card-text">$150.00</p>
+                        <button class="btn btn-success">View More</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="public/smartwatch.jpg" class="card-img-top" alt="Smartwatch">
+                    <div class="card-body">
+                        <h5 class="card-title">Smartwatch</h5>
+                        <p class="card-text">$250.00</p>
+                        <button class="btn btn-success">View More</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
-  <footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2025 My Shop. All Rights Reserved.</p>
-  </footer>
+    <section class="bg-primary text-white p-4">
+        <div class="container">
+            <h3>Subscribe to our Newsletter</h3>
+            <form class="d-flex">
+                <input type="email" class="form-control me-2" placeholder="Enter your email" required>
+                <button type="submit" class="btn btn-light">Subscribe</button>
+            </form>
+        </div>
+    </section>
 
-  <script src="shop.js"></script>
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2025 My Shop. All Rights Reserved.</p>
+        <div class="social-icons">
+            <a href="#" class="text-white me-3"><i class="fab fa-facebook"></i> Facebook</a>
+            <a href="#" class="text-white me-3"><i class="fab fa-twitter"></i> Twitter</a>
+            <a href="#" class="text-white"><i class="fab fa-instagram"></i> Instagram</a>
+        </div>
+    </footer>
+
+    <script>
+        function searchProducts() {
+            const searchTerm = document.getElementById('search-bar').value.toLowerCase();
+            const productCards = document.querySelectorAll('.product-card');
+            productCards.forEach(card => {
+                const productName = card.querySelector('.card-title').textContent.toLowerCase();
+                card.style.display = productName.includes(searchTerm) ? '' : 'none';
+            });
+        }
+    </script>
 </body>
 </html>
